infra/k8s/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: madhurachanna/auth
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  # type: ClusterIP
  selector:
    app: auth
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
