infra/k8s/auth-postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: auth-postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: auth-postgres-storage
          persistentVolumeClaim:
            claimName: auth-db-pvc


---
apiVersion: v1
kind: Service
metadata:
  name: auth-postgres-service
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
